--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,14 +1,1 @@
-<label>Who: {{input value=who autofocus=true}}</label>
-<br>
-<label>Reason: {{input value=why.reason}}</label>
-
-<hr>
-
-<h1>Hello, {{who}}!</h1>
-<h2>Reason: {{why.reason}}</h2>
-
-<hr>
-
-<p>Versions: {{versions}}</p>
-
-<p><button {{action "rollback"}} {{bind-attr disabled=disableRollback}}>Rollback</button></p>
+<h1>Hello, World!</h1>
